# Code-Analytics

server-part/: CMakeLists.txt  main.cpp
server-part/tools/: MinHashMaker.cpp  MinHashMaker.h  TableManager.cpp  TableManager.h
user-part/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
